[package]
name = "kmc3d"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.8.2"
rand = "0.8.5"
ndarray = "^0.15.4"
clap = { version = "4.4.6", features = ["derive"] }
kiss3d = "0.35.0"
petgraph = "^0.6"
lazy_static = "^1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.107"
plotly = "0.8.4"


[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
